--- a/style.css
+++ b/style.css
@@ -65,3 +65,9 @@ color: black;
     font-family: 'Rubik', sans-serif;
     color:orange;
 }
+.footer{
+    background: #121612;
+    color: orange ;
+
+}
+
